# town

./: go.work  go.work.sum
bys-api/: README.md  go.mod  go.sum
bys-api/bootstrap/: boot.go  config.go  config_sample.yml
bys-api/cmd/: main.go
bys-api/dal/: README.md  football_match.go  store.go
bys-api/model/: base.go  football.go
bys-api/pkg/ujson/: str.go
bys-api/pkg/ulog/: log.go
bys-api/rpc/: README.md  client.go  host_status.go
bys-api/rpc/proto/: host_status_service.pb.go
bys-api/script/: build.sh
bys-api/server/handlers/: common.go  football_match.go  server.go
bys-api/server/middleware/: cors.go  recover.go
bys-api/util/resp/: code.go  common.go
bys-rpc/: go.mod  main.go
bys-rpc/rpc/: gen.sh
bys-rpc/rpc/proto/: host_status_service_grpc.pb.go
bys-rpc/script/: build.sh
bys-rpc/server/: server.go
bys-rs-rpc/: Cargo.toml  build.rs
bys-rs-rpc/src/: client.rs  server.rs
bys-rs-rpc/src/proto/: hoststatus.rs  mod.rs
proto/: host_status_service.proto
